# Pdf-To-Office-Tool

./: .gitignore  LICENSE  README.md  pyproject.toml
pdf2word_tool/: __init__.py  cli.py  converter.py  excel_extractor.py
tests/: test_converter.py
