[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-to-office-tool"
version = "0.1.0"
description = "A small command line tool for converting PDF files to Word, PowerPoint, and Excel files."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "hnytgl"}]
dependencies = [
    "openpyxl>=3.1.0",
    "pdfplumber>=0.11.0",
    "pdf2docx>=0.5.8",
    "pymupdf>=1.24.0",
    "python-pptx>=0.6.23",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
pdf2office = "pdf2word_tool.cli:main"
pdf2word = "pdf2word_tool.cli:main"

[tool.setuptools.packages.find]
include = ["pdf2word_tool*"]
